--- a/main.html
+++ b/main.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<link rel="stylesheet" href="style.css">
+    <style>
+        .questions {
+            background-color: #f8fffe;
+            height: 50px;
+            margin-top: 20px;
+            padding: 15px;
+            width: 600px;
+            border-left: 8px solid green;
+        }
+    </style>
 </head>
 
 <body>
-	<blockquote class="questions">
+    <blockquote class="questions">
         <p>Who was the first female to become the governor of an Indian state?</p>
     </blockquote>
 
@@ -17,6 +27,7 @@
         <p>Who is President of India?</p>
     </blockquote>
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 </body>
+
 </html>
