--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
         .questions {
             background-color: #f8fffe;
             height: 50px;
-            width: 500px;
+            max-width: 600px;
             margin-top: 20px;
             padding: 15px;
             border-left: 8px solid green;
